--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,20 @@
 {
   "name": "Jogo da Forca",
   "short_name": "Forca",
-  "start_url": "Forca_PWA.html",
+  "start_url": "/Forca/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3498db",
-  "icons": [{
-    "src": "icon-192.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }, {
-    "src": "icon-512.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }]
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
